--- a/client/app/partials/aboutme.html
+++ b/client/app/partials/aboutme.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h3 class="section-title">About Me</h3>
+        <h1 class="section-title">Robb Marsee</h1>
         <div class="section-title-divider"></div>
-        <h2 class="section-description">A software engineer with a passion for problem solving and everything drag.</h2>
+        <h2 class="section-description">A full-stack software engineer with a passion for problem solving and developing applications that help enhance user's lives.</h2>
       </div>
     </div>
     
@@ -12,8 +12,7 @@
       <div class="col-md-3">
         <div class="profile">
           <div class="pic"><img src="img/robb.jpg" alt=""></div>
-          <h4>Robb Marsee</h4>
-          <span>Software Engineer</span>
+
             <div class="social">
             <a href="mailto:robb.marsee@gmail.com?subject=Fantasy Drag Race Inquiry"><i class="fa fa-envelope" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/in/robb-marsee/"><i class="fa fa-linkedin"></i></a>
@@ -26,8 +25,14 @@
       </div>
       <div class="col-md-9">
         <div class="quote">
-          <b></b>
-          I am a recent graduate from Hack Reactor and longtime fan of RuPaul's Drag Race.  This project was a solo hack-a-thon and was completed in less than a week.  The goal was to get a deeper understanding in Angular.js since I have primarily been using React the past six months.  I am currently seeking employment and would love to discuss this project, any software engineering positions, and anything related to drag.  
+          <b>Technical Skills</b>
+          <br></br>
+          GENERAL – Software Development, JavaScript, ES6, JQuery, HTML, CSS
+          <br></br>
+          FRONTEND – AngularJS, React, React Native, React Router, Redux, Backbone
+          <br></br>
+          BACKEND – Node.js, Express, MongoDB, PostgreSQL MySQL, Redis
+ 
           <small></small>
         </div>
       </div>
