update for minor error

--- a/client/app/partials/aboutme.html
+++ b/client/app/partials/aboutme.html
@@ -4,7 +4,7 @@
       <div class="col-md-12">
         <h1 class="section-title">Robb Marsee</h1>
         <div class="section-title-divider"></div>
-        <h2 class="section-description">A full-stack software engineer with a passion for problem solving and developing applications that help enhance user's lives.</h2>
+        <h2 class="section-description">A software engineer with a passion for problem solving and developing applications that help enhance user's lives.</h2>
       </div>
     </div>
     
