--- a/client/app/partials/aboutme.html
+++ b/client/app/partials/aboutme.html
@@ -14,7 +14,7 @@
           <div class="pic"><img src="img/robb.jpg" alt=""></div>
 
             <div class="social">
-            <a href="mailto:robb.marsee@gmail.com?subject=Fantasy Drag Race Inquiry"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a href="mailto:robb.marsee@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/in/robb-marsee/"><i class="fa fa-linkedin"></i></a>
               <a href="https://github.com/ro-double-b"><i class="fa fa-github"></i></a>
 
